# Windows-Service-Process-Monitoring-Agent

./: .env.example  .gitignore  ADMIN_PANEL_GUIDE.md  ADMIN_PANEL_QUICKSTART.md  API_IMPLEMENTATION_SUMMARY.md  DASHBOARD_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  IMPORT_MIGRATION_REFERENCE.md  MIGRATION_GUIDE.md  PROCESS_CONTROL_GUIDE.md  PROCESS_CONTROL_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_SERVICE.md  REST_API_GUIDE.md  REST_API_QUICKSTART.md  SERVICE_INSTALLATION_GUIDE.md  VISUALIZATION_GUIDE.md  WINDOWS_SERVICE_FEATURES.md  admin_panel.py  alert_manager.py  anomaly_detector.py  api_client.py  api_examples.py  api_server.py  api_test_examples.sh  build_exe.py  chart_integration_examples.py  config.py  dashboard_app.py  dashboard_interactive.html  dashboard_streamlit.py  dashboard_streamlit_enhanced.py  demo_scenarios.py  index.html  main.py  metrics_collector.py  monitor_agent.py  notification_handler.py  (+15 more)
api/: api_server.py
app/: __init__.py  config.py  constants.py  logging_setup.py  models.py  monitoring.py  process_display.py  process_ranking.py
cli/: agent_cli.py
config/: blacklist.json  whitelist.json
dashboard/: dashboard_streamlit.py
gui/: __init__.py  components.py  main_window.py  scan_engine.py  scan_worker.py  styles.py
logs/: alerts_20260410_231132.json  alerts_20260411_092035.json  alerts_20260411_101928.json  alerts_20260411_104227.json  alerts_20260411_110432.json
metrics/: metrics_history.jsonl
reports/: monitoring_detailed_20260411_092035.txt  monitoring_detailed_20260411_101928.txt  monitoring_detailed_20260411_104227.txt  (+6 more)
(+6 files in other folders)
