[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-service-process-monitoring-agent"
version = "0.1.0"
description = "Windows service and process monitoring agent for defensive telemetry."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Pratik Barbudhe" }]
dependencies = [
    "psutil>=5.9.0",
    "pywin32>=305",
    "WMI>=1.5.1",
    "colorama>=0.4.6",
    "streamlit>=1.28.0",
    "PyQt6>=6.5.0",
]

[project.scripts]
monitor-agent = "monitor_agent:main"

[tool.setuptools]
py-modules = [
    "monitor_agent",
    "process_analyzer",
    "service_auditor",
    "alert_manager",
    "report_generator",
    "config",
    "demo_scenarios",
    "dashboard_streamlit",
    "path_utils",
]
packages = ["gui"]
